# routes/api.php
@@ -20,6 +20,18 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::resource('customers',CustomerController::class);
-Route::resource('orders',OrderController::class);
+Route::get('/customers/', [CustomerController::class, 'index']);
+Route::post('/customers/', [CustomerController::class, 'store']);
+Route::put('/customers/{id}', [CustomerController::class, 'update']);
+Route::delete('/customers/{id}', [CustomerController::class, 'destroy']);
+
+
+
+Route::get('/orders/', [OrderController::class, 'index']);
+Route::get('/orders/getTotalOrders', [OrderController::class, 'getTotalOrders']);
+Route::post('/orders/', [OrderController::class, 'store']);
+Route::put('/orders/{id}', [OrderController::class, 'update']);
+Route::delete('/orders/{id}', [OrderController::class, 'destroy']);
 Route::put('/orders/updateStatus/{id}', [OrderController::class, 'updateStatus']);
+
+
